fix: tabs in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,6 +26,8 @@
   --ifm-blockquote-padding-horizontal: 20px;
   --ifm-alert-padding-horizontal: 20px;
   --ifm-navbar-padding-horizontal: 16px;
+  --tabs-bg-active: white;
+  --tabs-text-inactive: rgb(156 163 175);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -40,6 +42,8 @@
   --ifm-font-color-base: #fff;
   --ifm-blockquote-color: #c8c8c8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --tabs-bg-active: #1c1c1d;
+  --tabs-text-inactive: #bab0b0;
 }
 
 img {
@@ -58,11 +62,11 @@ img {
 }
 
 .tabs-container [role="tab"] {
-  @apply border-[1px] border-solid border-gray-300 py-2 bg-white border-b-0;
+  @apply rounded-t-md rounded-b-none border-[1px] border-solid border-gray-300 py-2 bg-[color:var(--tabs-bg-active)] border-b-0;
 }
 .tabs-container [role="tab"][aria-selected="false"] {
-  @apply bg-gray-100;
+  @apply bg-[color:var(--tabs-bg)] text-gray-400;
 }
 .tabs-container [role="tabpanel"] {
-  @apply border-[1px] border-solid border-gray-300 p-5 -mt-[18px];
+  @apply border-[1px] border-solid border-gray-300 p-5 -mt-[17px];
 }
